Changes to the main stylesheet, adaptions in sthe shell scripts for osx to produce german/french documents with the general script and stylesheet

--- a/eheathwiki_pdfstyle.css
+++ b/eheathwiki_pdfstyle.css
@@ -1168,6 +1168,21 @@ a.image {
 	page-break-after:never;
 }
 
+table.versionbox {
+	width:100%;
+	margin: 0;
+}
+table.versionbox td:nth-child(1) {
+	width: 10%;
+}
+table.versionbox td:nth-child(2),
+table.versionbox td:nth-child(3),
+table.versionbox td:nth-child(4) {
+	width: 30%;
+}
+table.usecase {
+font-size:50%;
+}
 
 
 /*==================================================
